--- a/html/commodity.html
+++ b/html/commodity.html
@@ -54,7 +54,7 @@
     </style>
 
 </head>
-<body >
+<body style="overflow-x: hidden;overflow-y: scroll">
 <div class="top-div" style="width: 100%;position:fixed;top: 0px;left: 0px;z-index: 10001">
     <div class="sl-flex-row-center-flex-start " style="background-color: red;height: 3rem;padding-left: 0.8rem;">
         <img src="../assets/images/back.png" alt="" style="width: 1.5rem;height: 1.5rem;" onclick="goBack()">
@@ -198,12 +198,12 @@
    </div>
 </div>
 
-<div data-am-widget="navbar" class="am-navbar am-cf am-navbar-default " style="border-top: 2px solid #E5E5E5;">
+<div data-am-widget="navbar" class="am-navbar am-cf am-navbar-default  sl-navbar" style="border-top: 2px solid #E5E5E5;">
     <ul class=" am-navbar-nav am-cf am-avg-sm-4 ">
         <li >
             <a href="#" class="">
                 <img src="../assets/images/bottomNavClick/首页.png" alt="">
-                <span class="am-navbar-label  sl-font-color-red">首页</span>
+                <span class="am-navbar-label  sl-color-red">首页</span>
             </a>
         </li>
         <!--<li >-->
