--- a/version-1/commodity_v2.html
+++ b/version-1/commodity_v2.html
@@ -407,8 +407,8 @@
 <!--白色层-->
 <div id="whiteTier"></div>
 <!--图片层-->
-<div style="background-color: red;display: none" id="imgTier">
-    <img src="" alt="" style="width: 100%;height: 100%">
+<div style="background-color: white;display: none;padding: .2rem;border-radius: 50%;border: 2px solid black;" id="imgTier">
+    <img src="" alt="" style="width: 100%;height: 100%;border: 1px solid black;">
 </div>
 
 
@@ -546,7 +546,7 @@
                 top: itT-docuTop,
                 left: itL-docuLeft,
                 zIndex: 10007,
-                borderTopRightRadius: 5,
+//                borderTopRightRadius: 5,
 
             });
 //            $('#whiteTier').css({
