--- a/version-1/my.html
+++ b/version-1/my.html
@@ -53,7 +53,7 @@
         }
     </style>
 </head>
-<body>
+<body style="background-color: #EEEEF3">
 <div data-am-sticky class="sl-background-color sl-background-color-height-common sl-grid-flex-row-around">
     <!--<i class="am-icon-gear am-icon-sm  sl-icon-size-color sl-margin-left"></i>-->
     <!--<i class="am-icon-comment-o am-icon-sm  sl-icon-size-color sl-margin-right"></i>-->
@@ -77,127 +77,52 @@
         <!--<i class="am-icon-angle-right am-icon-sm sl-margin-left-5px" ></i>-->
     <!--</div>-->
 <!--</div>-->
-<div class="am-g sl-background-color sl-background-color-height-common-2 sl-grid-row-center sl-font-color-white">
+<div class="am-g sl-background-color sl-background-color-height-common-2 sl-grid-row-center sl-font-color-white sl-flex-row-center-flex-start">
     <div class="am-u-sm-3 am-u-md-3 am-u-lg-3 sl-padding-0px sl-grid-row-center">
         <img src="../assets/images/self_info.png" class="am-img-responsive" style="width: 60px;height: 60px;padding: auto auto"/>
     </div>
-    <div class="am-u-sm-5 am-u-md-5 am-u-lg-5 sl-grid sl-padding-0px">
+    <div class="am-u-sm-5 am-u-md-5 am-u-lg-5 sl-grid sl-padding-0px sl-flex-column-flex-start-center">
         <span>捂着嘴眼泪掉下来</span>
-        <!--<div class="sl-background-color-yellow sl-border-radius-1000px sl-font-size-12px sl-padding-2px-5px" >-->
-            <!--<i class="am-icon-graduation-cap"></i>-->
-            <!--<span class="sl-font-color-gray">M1会员</span>-->
-            <!--<i class="am-icon-angle-right am-icon-sm sl-font-color-gray" ></i>-->
-        <!--</div>-->
-    </div>
-    <div class="am-u-sm-4 am-u-md-4 am-u-lg-4 sl-grid-row-center  sl-padding-0px ">
-        <a href="#" class="sl-font sl-font-color-white">地址管理</a>
-        <i class="am-icon-angle-right am-icon-sm sl-margin-left-5px" ></i>
-    </div>
-</div>
-<ul class="am-avg-sm-3 am-avg-md-3 am-avg-lg-3 sl-margin-10px-10px sl-background-color-white sl-flex-row-center-center sl-padding-5px-0px">
-    <li >
-        <div class="sl-flex-column-center-center">
-            <span class="sl-font-color-gray sl-font-size-14px">积分</span>
+        <div class="">
+            <span class="sl-font-size-14px">积分 :</span>
             <span>100</span>
         </div>
-    </li>
-    <!--<li class="sl-flex-column-center-center">-->
-        <!--<div class="sl-flex-column-center-center">-->
-            <!--<div class="sl-flex-row-center-center sl-border-radius-percent50 sl-padding-5px sl-border-1px-solid-D3D3D3 sl-height-30px sl-width-30px sl-margin-bottom-5px"><i class="am-icon-heart sl-icon-color-red"></i></div>-->
-            <!--<span class="sl-font-color-gray sl-font-size-14px">影迹</span>-->
-        <!--</div>-->
-    <!--</li>-->
-    <!--<li class="sl-flex-column-center-center">-->
-        <!--<div class="sl-flex-column-center-center">-->
-            <!--<div class="sl-flex-row-center-center sl-border-radius-percent50 sl-padding-5px sl-border-1px-solid-D3D3D3 sl-height-30px sl-width-30px sl-margin-bottom-5px"><i class="am-icon-heart sl-icon-color-red"></i></div>-->
-            <!--<span class="sl-font-color-gray sl-font-size-14px">好友</span>-->
-        <!--</div>-->
-    <!--</li>-->
-</ul>
-<ul class="am-avg-sm-2 am-avg-md-2 am-avg-lg-2 sl-background-color-white sl-margin-0px-10px sl-font-color-gray sl-padding-5px sl-border-bottom-1px-solid-D3D3D3">
-    <li>
+    </div>
+</div>
+
+<ul class="am-avg-sm-2 am-avg-md-2 am-avg-lg-2 sl-background-color-white sl-margin-08rem-08rem-0rem-08rem sl-font-color-gray sl-padding-08rem sl-border-bottom-1px-solid-D3D3D3 sl-border-radius-08rem-08rem-0rem-0rem">
+    <li style="">
         <span>我的订单</span>
     </li>
-    <li >
+    <li data-index="0">
         <div class="sl-flex-row-center-flex-end sl-font-size-14px">
-            <span>历史兑换</span>
-            <i class="am-icon-angle-right am-icon-sm sl-margin-left-5px" ></i>
+            <span class="sl-margin-right-5px">历史兑换</span>
+            <div><img src="../assets/images/方向右.png" alt="" style="width: 1rem;height: 1rem;"></div>
         </div>
     </li>
 </ul>
-<ul class="am-avg-sm-2 am-avg-md-2 am-avg-lg-2 sl-background-color-white sl-margin-0px-10px">
-    <li>
+<ul class="am-avg-sm-2 am-avg-md-2 am-avg-lg-2 sl-background-color-white sl-margin-0rem-08rem sl-border-radius-0rem-0rem-08rem-08rem" id="boughtItem">
+    <li data-index="1">
         <div class="sl-flex-column-center-center sl-padding-10px-0px">
            <i class="am-icon-paypal sl-icon-color-red am-icon-sm"></i>
             <span class="sl-font-color-gray sl-font-size-14px">待发货</span>
         </div>
     </li>
-    <li>
+    <li data-index="2">
         <div class="sl-flex-column-center-center  sl-padding-10px-0px">
            <i class="am-icon-truck sl-icon-color-red am-icon-sm"></i>
             <span class="sl-font-color-gray sl-font-size-14px">待收货</span>
         </div>
     </li>
-    <!--<li>-->
-        <!--<div class="sl-flex-column-center-center  sl-padding-10px-0px">-->
-           <!--<i class="am-icon-heart sl-icon-color-red am-icon-sm"></i>-->
-            <!--<span class="sl-font-color-gray sl-font-size-14px">待评价</span>-->
-        <!--</div>-->
-    <!--</li>-->
-<!--</ul>-->
-
-<!--<ul class="am-avg-sm-2 am-avg-md-2 am-avg-lg-2 sl-background-color-white  sl-margin-10px-10px-0px-10px  sl-font-color-gray sl-padding-5px sl-border-bottom-1px-solid-D3D3D3">-->
-    <!--<li>-->
-        <!--<span>必备工具</span>-->
-    <!--</li>-->
-    <!--<li >-->
-        <!--<div class="sl-flex-row-center-flex-end sl-font-size-14px">-->
-            <!--<span>查看全部</span>-->
-            <!--<i class="am-icon-angle-right am-icon-sm sl-margin-left-5px" ></i>-->
-        <!--</div>-->
-    <!--</li>-->
-<!--</ul>-->
-<!--<ul class="am-avg-sm-3 am-avg-md-3 am-avg-lg-3 sl-background-color-white sl-margin-0px-10px">-->
-    <!--<li>-->
-        <!--<div class="sl-flex-column-center-center sl-padding-10px-0px">-->
-            <!--<i class="am-icon-map sl-icon-color-6D6D6D am-icon-sm"></i>-->
-            <!--<span class="sl-font-color-gray sl-font-size-14px">地址管理</span>-->
-        <!--</div>-->
-    <!--</li>-->
-    <!--<li>-->
-        <!--<div class="sl-flex-column-center-center  sl-padding-10px-0px">-->
-            <!--<i class="am-icon-trophy sl-icon-color-6D6D6D am-icon-sm"></i>-->
-            <!--<span class="sl-font-color-gray sl-font-size-14px">会员中心</span>-->
-        <!--</div>-->
-    <!--</li>-->
-    <!--<li>-->
-        <!--<div class="sl-flex-column-center-center  sl-padding-10px-0px">-->
-            <!--<i class="am-icon-user  sl-icon-color-6D6D6D am-icon-sm"></i>-->
-            <!--<span class="sl-font-color-gray sl-font-size-14px">观影人</span>-->
-        <!--</div>-->
-    <!--</li>-->
-<!--</ul>-->
-<!--<ul class="am-avg-sm-3 am-avg-md-3 am-avg-lg-3 sl-background-color-white sl-margin-0px-10px">-->
-    <!--<li>-->
-        <!--<div class="sl-flex-column-center-center sl-padding-10px-0px">-->
-            <!--<i class="am-icon-feed sl-icon-color-6D6D6D am-icon-sm"></i>-->
-            <!--<span class="sl-font-color-gray sl-font-size-14px">订阅</span>-->
-        <!--</div>-->
-    <!--</li>-->
-    <!--<li>-->
-        <!--<div class="sl-flex-column-center-center  sl-padding-10px-0px">-->
-            <!--<i class="am-icon-heart sl-icon-color-6D6D6D am-icon-sm"></i>-->
-            <!--<span class="sl-font-color-gray sl-font-size-14px">收藏</span>-->
-        <!--</div>-->
-    <!--</li>-->
-    <!--<li>-->
-        <!--<div class="sl-flex-column-center-center  sl-padding-10px-0px">-->
-            <!--<i class="am-icon-headphones sl-icon-color-6D6D6D am-icon-sm"></i>-->
-            <!--<span class="sl-font-color-gray sl-font-size-14px">在线客服</span>-->
-        <!--</div>-->
-    <!--</li>-->
-<!--</ul>-->
-
+</ul>
+<ul class="am-avg-sm-3 am-avg-md-3 am-avg-lg-3 sl-margin-08rem-08rem-0rem-08rem sl-background-color-white sl-flex-row-center-center sl-padding-08rem sl-margin-left sl-border-radius-08rem">
+    <li style="width: 100%;">
+        <div class="sl-flex-row-center-space-between" id="address">
+            <span class="sl-font-color-gray ">我的地址</span>
+            <div><img src="../assets/images/方向右.png" alt="" style="width: 1rem;height: 1rem;"></div>
+        </div>
+    </li>
+</ul>
 
 <div data-am-widget="navbar" class="am-navbar am-cf am-navbar-default " style="border-top: 2px solid #E5E5E5;">
     <ul class=" am-navbar-nav am-cf am-avg-sm-4 ">
@@ -233,9 +158,22 @@
     //全局变量
     var rem = new Rem();
     
-    $(function () {
-        
+//    $(function () {
+//
+//    })
+    $('#address').click(function () {
+        location.href = 'addressList.html'
     })
+    $('#boughtItem li').click(function () {
+        var index = $(this).data('index');
+        sessionStorage.setItem('index',index);
+        location.href = 'boughtList.html'
 
+    });
+    $('li[data-index="0"]').click(function () {
+        var index = $(this).data('index');
+        sessionStorage.setItem('index',index);
+        location.href = 'boughtList.html'
+    })
 </script>
 </html>
