--- a/version-1/test.html
+++ b/version-1/test.html
@@ -74,8 +74,8 @@
 </div>
 
 <div style="background-color: black;padding: 2rem;" >
-    <div  style="background-color: red;width: 100px;height: 100px;border-radius: 50%;">
-            <img src="../assets/images/bing-1.jpg" alt="" style="width: 100%;height: 100%;;">
+    <div  style="background-color: red;width: 100px;height: 100px;padding: 2rem;border-radius: 50%">
+            <img src="../assets/images/bing-1.jpg" alt="" style="width: 100%;height: 100%;border-radius: 50%;">
     </div>
 </div>
 
