--- a/html/addAddress.html
+++ b/html/addAddress.html
@@ -205,7 +205,7 @@
     //标题文字居中
     $(function () {
         rem.titleCenter();
-        rem.bottomNavFixed($('#bottomNav'));
+//        rem.bottomNavFixed($('#bottomNav'));
     });
     //
     function goBack() {
