--- a/html/girlFruit.html
+++ b/html/girlFruit.html
@@ -63,9 +63,9 @@
 <div style=";margin-top: 3rem;">
     <div data-am-widget="slider" class="am-slider am-slider-a1" data-am-slider='{&quot;directionNav&quot;:false}'  >
         <ul class="am-slides">
-            <li><img src="../assets/images/fruits/gng/slider/gng_1.jpg" /></li>
-            <li><img src="../assets/images/fruits/gng/slider/gng_2.jpg" /></li>
-            <li><img src="../assets/images/fruits/gng/slider/gng_3.jpg" /></li>
+            <li><img src="../assets/images/fruits/gng/0/slider/gng_1.jpg" /></li>
+            <li><img src="../assets/images/fruits/gng/0/slider/gng_2.jpg" /></li>
+            <li><img src="../assets/images/fruits/gng/0/slider/gng_3.jpg" /></li>
         </ul>
     </div>
 </div>
@@ -107,22 +107,22 @@
 </div>
 <div class="sl-flex-column-center-center" id="detailList">
     <div class="">
-        <img src="../assets/images/fruits/gng/detail/gng_1.jpg" alt="" style="width: 100%;height: 100%;">
+        <img src="../assets/images/fruits/gng/0/detail/gng_1.jpg" alt="" style="width: 100%;height: 100%;">
     </div>
     <div class="">
-        <img src="../assets/images/fruits/gng/detail/gng_2.jpg" alt="" style="width: 100%;height: 100%;">
+        <img src="../assets/images/fruits/gng/0/detail/gng_2.jpg" alt="" style="width: 100%;height: 100%;">
     </div>
     <div class="">
-        <img src="../assets/images/fruits/gng/detail/gng_3.jpg" alt="" style="width: 100%;height: 100%;">
+        <img src="../assets/images/fruits/gng/0/detail/gng_3.jpg" alt="" style="width: 100%;height: 100%;">
     </div>
     <div class="">
-        <img src="../assets/images/fruits/gng/detail/gng_4.jpg" alt="" style="width: 100%;height: 100%;">
+        <img src="../assets/images/fruits/gng/0/detail/gng_4.jpg" alt="" style="width: 100%;height: 100%;">
     </div>
     <div class="">
-        <img src="../assets/images/fruits/gng/detail/gng_5.jpg" alt="" style="width: 100%;height: 100%;">
+        <img src="../assets/images/fruits/gng/0/detail/gng_5.jpg" alt="" style="width: 100%;height: 100%;">
     </div>
     <div class="">
-        <img src="../assets/images/fruits/gng/detail/gng_6.jpg" alt="" style="width: 100%;height: 100%;">
+        <img src="../assets/images/fruits/gng/0/detail/gng_6.jpg" alt="" style="width: 100%;height: 100%;">
     </div>
 </div>
 
@@ -203,7 +203,7 @@
 
     //底部导航栏
     $(function () {
-       rem.bottomNavFixed($('#bottomNav'));
+//       rem.bottomNavFixed($('#bottomNav'));
         var lH = $('#bottomNav').children('div').eq(0).outerHeight();
         $('#bottomNav').children('div').eq(1).css('height',lH);
         rem.weiXinBrowers();
