--- a/html/commodity.html
+++ b/html/commodity.html
@@ -66,7 +66,7 @@
         <li data-fruit-type="0">
             <div class="sl-margin-04rem-04rem-04rem-08rem sl-border-1px-solid-D3D3D3">
                 <div class="sl-background-color-F6F6F6 sl-flex-row-center-center sl-padding-1rem">
-                    <img src="../assets/images/fruits/pg/slider/pg_2.jpg" alt="" style="width: 100%;height: 100%;">
+                    <img src="../assets/images/fruits/pg/0/slider/pg_2.jpg" alt="" style="width: 100%;height: 100%;">
                 </div>
                 <div class="sl-border">
                     <div class="am-text-truncate">智利嘎啦果6个115g以上/个</div>
@@ -94,7 +94,7 @@
         <li data-fruit-type="1">
             <div class="sl-margin-04rem-08rem-04rem-04rem sl-border-1px-solid-D3D3D3">
                 <div class="sl-background-color-F6F6F6 sl-flex-row-center-center sl-padding-1rem">
-                    <img src="../assets/images/fruits/gng/slider/gng_2.jpg" alt="" style="width: 100%;height: 100%;">
+                    <img src="../assets/images/fruits/gng/0/slider/gng_2.jpg" alt="" style="width: 100%;height: 100%;">
                 </div>
                 <div class="sl-border">
                     <div class="am-text-truncate">吉林长白山菇娘果500g</div>
@@ -119,6 +119,286 @@
                 </div>
             </div>
         </li>
+        <!--<li data-fruit-type="0">-->
+            <!--<div class="sl-margin-04rem-04rem-04rem-08rem sl-border-1px-solid-D3D3D3">-->
+                <!--<div class="sl-background-color-F6F6F6 sl-flex-row-center-center sl-padding-1rem">-->
+                    <!--<img src="../assets/images/fruits/pg/slider/pg_2.jpg" alt="" style="width: 100%;height: 100%;">-->
+                <!--</div>-->
+                <!--<div class="sl-border">-->
+                    <!--<div class="am-text-truncate">智利嘎啦果6个115g以上/个</div>-->
+                    <!--<div class="sl-flex-row-center-space-between data-JF-KC">-->
+                        <!--<div class="sl-flex-row-center-flex-start">-->
+                            <!--<img src="../assets/images/money.png" alt="" style="width: 1rem;height: 1rem;">-->
+                            <!--<span style="color: red;">120</span>-->
+                            <!--<span> &nbsp;积分</span>-->
+                        <!--</div>-->
+                        <!--<div>-->
+                            <!--<span>库存:</span><b style="color: red;">100</b>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="sl-flex-row-center-space-between">-->
+                        <!--<div style="font-size: .6rem;">-->
+                            <!--<span>由</span><b style="color: #44b549;">易批购商城</b><span>提供</span>-->
+                        <!--</div>-->
+                        <!--<div>-->
+                            <!--<button class="ls-button">兑换</button>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</li>-->
+        <!--<li data-fruit-type="1">-->
+            <!--<div class="sl-margin-04rem-08rem-04rem-04rem sl-border-1px-solid-D3D3D3">-->
+                <!--<div class="sl-background-color-F6F6F6 sl-flex-row-center-center sl-padding-1rem">-->
+                    <!--<img src="../assets/images/fruits/gng/slider/gng_2.jpg" alt="" style="width: 100%;height: 100%;">-->
+                <!--</div>-->
+                <!--<div class="sl-border">-->
+                    <!--<div class="am-text-truncate">吉林长白山菇娘果500g</div>-->
+                    <!--<div class="sl-flex-row-center-space-between data-JF-KC">-->
+                        <!--<div class="sl-flex-row-center-flex-start">-->
+                            <!--<img src="../assets/images/money.png" alt="" style="width: 1rem;height: 1rem;">-->
+                            <!--<span style="color: red;">150</span>-->
+                            <!--<span> &nbsp;积分</span>-->
+                        <!--</div>-->
+                        <!--<div>-->
+                            <!--<span>库存:</span><b style="color: red;">60</b>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="sl-flex-row-center-space-between">-->
+                        <!--<div style="font-size: .6rem;">-->
+                            <!--<span>由</span><b style="color: #44b549;">易批购商城</b><span>提供</span>-->
+                        <!--</div>-->
+                        <!--<div>-->
+                            <!--<button class="ls-button">兑换</button>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</li>-->
+        <!--<li data-fruit-type="0">-->
+            <!--<div class="sl-margin-04rem-04rem-04rem-08rem sl-border-1px-solid-D3D3D3">-->
+                <!--<div class="sl-background-color-F6F6F6 sl-flex-row-center-center sl-padding-1rem">-->
+                    <!--<img src="../assets/images/fruits/pg/slider/pg_2.jpg" alt="" style="width: 100%;height: 100%;">-->
+                <!--</div>-->
+                <!--<div class="sl-border">-->
+                    <!--<div class="am-text-truncate">智利嘎啦果6个115g以上/个</div>-->
+                    <!--<div class="sl-flex-row-center-space-between data-JF-KC">-->
+                        <!--<div class="sl-flex-row-center-flex-start">-->
+                            <!--<img src="../assets/images/money.png" alt="" style="width: 1rem;height: 1rem;">-->
+                            <!--<span style="color: red;">120</span>-->
+                            <!--<span> &nbsp;积分</span>-->
+                        <!--</div>-->
+                        <!--<div>-->
+                            <!--<span>库存:</span><b style="color: red;">100</b>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="sl-flex-row-center-space-between">-->
+                        <!--<div style="font-size: .6rem;">-->
+                            <!--<span>由</span><b style="color: #44b549;">易批购商城</b><span>提供</span>-->
+                        <!--</div>-->
+                        <!--<div>-->
+                            <!--<button class="ls-button">兑换</button>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</li>-->
+        <!--<li data-fruit-type="1">-->
+            <!--<div class="sl-margin-04rem-08rem-04rem-04rem sl-border-1px-solid-D3D3D3">-->
+                <!--<div class="sl-background-color-F6F6F6 sl-flex-row-center-center sl-padding-1rem">-->
+                    <!--<img src="../assets/images/fruits/gng/slider/gng_2.jpg" alt="" style="width: 100%;height: 100%;">-->
+                <!--</div>-->
+                <!--<div class="sl-border">-->
+                    <!--<div class="am-text-truncate">吉林长白山菇娘果500g</div>-->
+                    <!--<div class="sl-flex-row-center-space-between data-JF-KC">-->
+                        <!--<div class="sl-flex-row-center-flex-start">-->
+                            <!--<img src="../assets/images/money.png" alt="" style="width: 1rem;height: 1rem;">-->
+                            <!--<span style="color: red;">150</span>-->
+                            <!--<span> &nbsp;积分</span>-->
+                        <!--</div>-->
+                        <!--<div>-->
+                            <!--<span>库存:</span><b style="color: red;">60</b>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="sl-flex-row-center-space-between">-->
+                        <!--<div style="font-size: .6rem;">-->
+                            <!--<span>由</span><b style="color: #44b549;">易批购商城</b><span>提供</span>-->
+                        <!--</div>-->
+                        <!--<div>-->
+                            <!--<button class="ls-button">兑换</button>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</li>-->
+        <!--<li data-fruit-type="0">-->
+            <!--<div class="sl-margin-04rem-04rem-04rem-08rem sl-border-1px-solid-D3D3D3">-->
+                <!--<div class="sl-background-color-F6F6F6 sl-flex-row-center-center sl-padding-1rem">-->
+                    <!--<img src="../assets/images/fruits/pg/slider/pg_2.jpg" alt="" style="width: 100%;height: 100%;">-->
+                <!--</div>-->
+                <!--<div class="sl-border">-->
+                    <!--<div class="am-text-truncate">智利嘎啦果6个115g以上/个</div>-->
+                    <!--<div class="sl-flex-row-center-space-between data-JF-KC">-->
+                        <!--<div class="sl-flex-row-center-flex-start">-->
+                            <!--<img src="../assets/images/money.png" alt="" style="width: 1rem;height: 1rem;">-->
+                            <!--<span style="color: red;">120</span>-->
+                            <!--<span> &nbsp;积分</span>-->
+                        <!--</div>-->
+                        <!--<div>-->
+                            <!--<span>库存:</span><b style="color: red;">100</b>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="sl-flex-row-center-space-between">-->
+                        <!--<div style="font-size: .6rem;">-->
+                            <!--<span>由</span><b style="color: #44b549;">易批购商城</b><span>提供</span>-->
+                        <!--</div>-->
+                        <!--<div>-->
+                            <!--<button class="ls-button">兑换</button>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</li>-->
+        <!--<li data-fruit-type="1">-->
+            <!--<div class="sl-margin-04rem-08rem-04rem-04rem sl-border-1px-solid-D3D3D3">-->
+                <!--<div class="sl-background-color-F6F6F6 sl-flex-row-center-center sl-padding-1rem">-->
+                    <!--<img src="../assets/images/fruits/gng/slider/gng_2.jpg" alt="" style="width: 100%;height: 100%;">-->
+                <!--</div>-->
+                <!--<div class="sl-border">-->
+                    <!--<div class="am-text-truncate">吉林长白山菇娘果500g</div>-->
+                    <!--<div class="sl-flex-row-center-space-between data-JF-KC">-->
+                        <!--<div class="sl-flex-row-center-flex-start">-->
+                            <!--<img src="../assets/images/money.png" alt="" style="width: 1rem;height: 1rem;">-->
+                            <!--<span style="color: red;">150</span>-->
+                            <!--<span> &nbsp;积分</span>-->
+                        <!--</div>-->
+                        <!--<div>-->
+                            <!--<span>库存:</span><b style="color: red;">60</b>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="sl-flex-row-center-space-between">-->
+                        <!--<div style="font-size: .6rem;">-->
+                            <!--<span>由</span><b style="color: #44b549;">易批购商城</b><span>提供</span>-->
+                        <!--</div>-->
+                        <!--<div>-->
+                            <!--<button class="ls-button">兑换</button>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</li>-->
+        <!--<li data-fruit-type="0">-->
+            <!--<div class="sl-margin-04rem-04rem-04rem-08rem sl-border-1px-solid-D3D3D3">-->
+                <!--<div class="sl-background-color-F6F6F6 sl-flex-row-center-center sl-padding-1rem">-->
+                    <!--<img src="../assets/images/fruits/pg/slider/pg_2.jpg" alt="" style="width: 100%;height: 100%;">-->
+                <!--</div>-->
+                <!--<div class="sl-border">-->
+                    <!--<div class="am-text-truncate">智利嘎啦果6个115g以上/个</div>-->
+                    <!--<div class="sl-flex-row-center-space-between data-JF-KC">-->
+                        <!--<div class="sl-flex-row-center-flex-start">-->
+                            <!--<img src="../assets/images/money.png" alt="" style="width: 1rem;height: 1rem;">-->
+                            <!--<span style="color: red;">120</span>-->
+                            <!--<span> &nbsp;积分</span>-->
+                        <!--</div>-->
+                        <!--<div>-->
+                            <!--<span>库存:</span><b style="color: red;">100</b>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="sl-flex-row-center-space-between">-->
+                        <!--<div style="font-size: .6rem;">-->
+                            <!--<span>由</span><b style="color: #44b549;">易批购商城</b><span>提供</span>-->
+                        <!--</div>-->
+                        <!--<div>-->
+                            <!--<button class="ls-button">兑换</button>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</li>-->
+        <!--<li data-fruit-type="1">-->
+            <!--<div class="sl-margin-04rem-08rem-04rem-04rem sl-border-1px-solid-D3D3D3">-->
+                <!--<div class="sl-background-color-F6F6F6 sl-flex-row-center-center sl-padding-1rem">-->
+                    <!--<img src="../assets/images/fruits/gng/slider/gng_2.jpg" alt="" style="width: 100%;height: 100%;">-->
+                <!--</div>-->
+                <!--<div class="sl-border">-->
+                    <!--<div class="am-text-truncate">吉林长白山菇娘果500g</div>-->
+                    <!--<div class="sl-flex-row-center-space-between data-JF-KC">-->
+                        <!--<div class="sl-flex-row-center-flex-start">-->
+                            <!--<img src="../assets/images/money.png" alt="" style="width: 1rem;height: 1rem;">-->
+                            <!--<span style="color: red;">150</span>-->
+                            <!--<span> &nbsp;积分</span>-->
+                        <!--</div>-->
+                        <!--<div>-->
+                            <!--<span>库存:</span><b style="color: red;">60</b>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="sl-flex-row-center-space-between">-->
+                        <!--<div style="font-size: .6rem;">-->
+                            <!--<span>由</span><b style="color: #44b549;">易批购商城</b><span>提供</span>-->
+                        <!--</div>-->
+                        <!--<div>-->
+                            <!--<button class="ls-button">兑换</button>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</li>-->
+        <!--<li data-fruit-type="0">-->
+            <!--<div class="sl-margin-04rem-04rem-04rem-08rem sl-border-1px-solid-D3D3D3">-->
+                <!--<div class="sl-background-color-F6F6F6 sl-flex-row-center-center sl-padding-1rem">-->
+                    <!--<img src="../assets/images/fruits/pg/slider/pg_2.jpg" alt="" style="width: 100%;height: 100%;">-->
+                <!--</div>-->
+                <!--<div class="sl-border">-->
+                    <!--<div class="am-text-truncate">智利嘎啦果6个115g以上/个</div>-->
+                    <!--<div class="sl-flex-row-center-space-between data-JF-KC">-->
+                        <!--<div class="sl-flex-row-center-flex-start">-->
+                            <!--<img src="../assets/images/money.png" alt="" style="width: 1rem;height: 1rem;">-->
+                            <!--<span style="color: red;">120</span>-->
+                            <!--<span> &nbsp;积分</span>-->
+                        <!--</div>-->
+                        <!--<div>-->
+                            <!--<span>库存:</span><b style="color: red;">100</b>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="sl-flex-row-center-space-between">-->
+                        <!--<div style="font-size: .6rem;">-->
+                            <!--<span>由</span><b style="color: #44b549;">易批购商城</b><span>提供</span>-->
+                        <!--</div>-->
+                        <!--<div>-->
+                            <!--<button class="ls-button">兑换</button>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</li>-->
+        <!--<li data-fruit-type="1">-->
+            <!--<div class="sl-margin-04rem-08rem-04rem-04rem sl-border-1px-solid-D3D3D3">-->
+                <!--<div class="sl-background-color-F6F6F6 sl-flex-row-center-center sl-padding-1rem">-->
+                    <!--<img src="../assets/images/fruits/gng/slider/gng_2.jpg" alt="" style="width: 100%;height: 100%;">-->
+                <!--</div>-->
+                <!--<div class="sl-border">-->
+                    <!--<div class="am-text-truncate">吉林长白山菇娘果500g</div>-->
+                    <!--<div class="sl-flex-row-center-space-between data-JF-KC">-->
+                        <!--<div class="sl-flex-row-center-flex-start">-->
+                            <!--<img src="../assets/images/money.png" alt="" style="width: 1rem;height: 1rem;">-->
+                            <!--<span style="color: red;">150</span>-->
+                            <!--<span> &nbsp;积分</span>-->
+                        <!--</div>-->
+                        <!--<div>-->
+                            <!--<span>库存:</span><b style="color: red;">60</b>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="sl-flex-row-center-space-between">-->
+                        <!--<div style="font-size: .6rem;">-->
+                            <!--<span>由</span><b style="color: #44b549;">易批购商城</b><span>提供</span>-->
+                        <!--</div>-->
+                        <!--<div>-->
+                            <!--<button class="ls-button">兑换</button>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</li>-->
     </ul>
 </div>
 <div class="am-modal am-modal-prompt" tabindex="-1" id="my-prompt">
@@ -198,7 +478,7 @@
    </div>
 </div>
 
-<div data-am-widget="navbar" class="am-navbar am-cf am-navbar-default  sl-navbar" style="border-top: 2px solid #E5E5E5;">
+<div data-am-widget="navbar" class="am-navbar am-cf am-navbar-default " style="border-top: 2px solid #E5E5E5;">
     <ul class=" am-navbar-nav am-cf am-avg-sm-4 ">
         <li >
             <a href="#" class="">
