--- a/html/commodityDetail.html
+++ b/html/commodityDetail.html
@@ -65,9 +65,9 @@
 <div style=";margin-top: 3rem;">
     <div data-am-widget="slider" class="am-slider am-slider-a1" data-am-slider='{&quot;directionNav&quot;:false}'  >
         <ul class="am-slides">
-            <li><img src="../assets/images/fruits/pg/slider/pg_1.jpg" /></li>
-            <li><img src="../assets/images/fruits/pg/slider/pg_2.jpg" /></li>
-            <li><img src="../assets/images/fruits/pg/slider/pg_3.jpg" /></li>
+            <li><img src="../assets/images/fruits/pg/0/slider/pg_1.jpg" /></li>
+            <li><img src="../assets/images/fruits/pg/0/slider/pg_2.jpg" /></li>
+            <li><img src="../assets/images/fruits/pg/0/slider/pg_3.jpg" /></li>
         </ul>
     </div>
 </div>
@@ -109,26 +109,26 @@
     <span><img src="../assets/images/省略号.png" alt="" style="width: 1rem;height: 1rem;margin-right:0.2rem;"></span>
 </div>
 <div class="sl-flex-column-center-center" id="detailList">
-    <div class="">
-        <img src="../assets/images/fruits/pg/detail/pg_1.jpg" alt="" style="width: 100%;height: 100%;">
+    <div>
+        <img src="../assets/images/fruits/pg/0/detail/pg_1.jpg" class="sl-width-height-100percent">
     </div>
     <div class="">
-        <img src="../assets/images/fruits/pg/detail/pg_2.jpg" alt="" style="width: 100%;height: 100%;">
+        <img src="../assets/images/fruits/pg/0/detail/pg_2.jpg" alt="" style="width: 100%;height: 100%;">
     </div>
     <div class="">
-        <img src="../assets/images/fruits/pg/detail/pg_3.jpg" alt="" style="width: 100%;height: 100%;">
+        <img src="../assets/images/fruits/pg/0/detail/pg_3.jpg" alt="" style="width: 100%;height: 100%;">
     </div>
     <div class="">
-        <img src="../assets/images/fruits/pg/detail/pg_4.jpg" alt="" style="width: 100%;height: 100%;">
+        <img src="../assets/images/fruits/pg/0/detail/pg_4.jpg" alt="" style="width: 100%;height: 100%;">
     </div>
     <div class="">
-        <img src="../assets/images/fruits/pg/detail/pg_5.jpg" alt="" style="width: 100%;height: 100%;">
+        <img src="../assets/images/fruits/pg/0/detail/pg_5.jpg" alt="" style="width: 100%;height: 100%;">
     </div>
     <div class="">
-        <img src="../assets/images/fruits/pg/detail/pg_6.jpg" alt="" style="width: 100%;height: 100%;">
+        <img src="../assets/images/fruits/pg/0/detail/pg_6.jpg" alt="" style="width: 100%;height: 100%;">
     </div>
     <div class="">
-        <img src="../assets/images/fruits/pg/detail/pg_7.jpg" alt="" style="width: 100%;height: 100%;">
+        <img src="../assets/images/fruits/pg/0/detail/pg_7.jpg" alt="" style="width: 100%;height: 100%;">
     </div>
 </div>
 
@@ -271,9 +271,12 @@
     var $needJF = $('#bottomNav').children('div:eq(0)').find('b');
     var wH = screen.height;
 
+
+
+
     //底部导航栏
     $(function () {
-       rem.bottomNavFixed($('#bottomNav'));
+//       rem.bottomNavFixed($('#bottomNav'));
         var lH = $('#bottomNav').children('div').eq(0).outerHeight();
         $('#bottomNav').children('div').eq(1).css('height',lH);
     });
