--- a/version-1/commodityDetail.html
+++ b/version-1/commodityDetail.html
@@ -65,9 +65,9 @@
 <div style=";margin-top: 3rem;">
     <div data-am-widget="slider" class="am-slider am-slider-a1" data-am-slider='{&quot;directionNav&quot;:false}'  >
         <ul class="am-slides">
-            <li><img src="../assets/images/fruits/pg/slider/pg_1.jpg" /></li>
-            <li><img src="../assets/images/fruits/pg/slider/pg_2.jpg" /></li>
-            <li><img src="../assets/images/fruits/pg/slider/pg_3.jpg" /></li>
+            <!--<li><img src="../assets/images/fruits/pg/0/slider/pg_1.jpg" /></li>-->
+            <!--<li><img src="../assets/images/fruits/pg/0/slider/pg_2.jpg" /></li>-->
+            <!--<li><img src="../assets/images/fruits/pg/0/slider/pg_3.jpg" /></li>-->
         </ul>
     </div>
 </div>
@@ -110,25 +110,25 @@
 </div>
 <div class="sl-flex-column-center-center" id="detailList">
     <div class="">
-        <img src="../assets/images/fruits/pg/detail/pg_1.jpg" alt="" style="width: 100%;height: 100%;">
+        <img src="../assets/images/fruits/pg/0/detail/pg_1.jpg" alt="" style="width: 100%;height: 100%;">
     </div>
     <div class="">
-        <img src="../assets/images/fruits/pg/detail/pg_2.jpg" alt="" style="width: 100%;height: 100%;">
+        <img src="../assets/images/fruits/pg/0/detail/pg_2.jpg" alt="" style="width: 100%;height: 100%;">
     </div>
     <div class="">
-        <img src="../assets/images/fruits/pg/detail/pg_3.jpg" alt="" style="width: 100%;height: 100%;">
+        <img src="../assets/images/fruits/pg/0/detail/pg_3.jpg" alt="" style="width: 100%;height: 100%;">
     </div>
     <div class="">
-        <img src="../assets/images/fruits/pg/detail/pg_4.jpg" alt="" style="width: 100%;height: 100%;">
+        <img src="../assets/images/fruits/pg/0/detail/pg_4.jpg" alt="" style="width: 100%;height: 100%;">
     </div>
     <div class="">
-        <img src="../assets/images/fruits/pg/detail/pg_5.jpg" alt="" style="width: 100%;height: 100%;">
+        <img src="../assets/images/fruits/pg/0/detail/pg_5.jpg" alt="" style="width: 100%;height: 100%;">
     </div>
     <div class="">
-        <img src="../assets/images/fruits/pg/detail/pg_6.jpg" alt="" style="width: 100%;height: 100%;">
+        <img src="../assets/images/fruits/pg/0/detail/pg_6.jpg" alt="" style="width: 100%;height: 100%;">
     </div>
     <div class="">
-        <img src="../assets/images/fruits/pg/detail/pg_7.jpg" alt="" style="width: 100%;height: 100%;">
+        <img src="../assets/images/fruits/pg/0/detail/pg_7.jpg" alt="" style="width: 100%;height: 100%;">
     </div>
 </div>
 
@@ -226,14 +226,13 @@
 <!--灰色层-->
 <div id="grayTier"></div>
 
-<div id="bottomNav" style="width: 100%;" class="sl-flex-row-center-space-between">
+<div id="bottomNav" style="width: 100%;" class="sl-flex-row-center-space-between sl-navbar">
     <div style="width: 70%;background-color: white;height:3rem;color: black;" class="sl-flex-row-center-flex-start">
         <span style="font-size: 0.8rem;color: black;margin-top: 0.2rem;margin-left: .8rem;">花费的积分&nbsp;&nbsp;:</span><b style="color: red;margin-left: .8rem;">0</b>
     </div>
-    <div style="width: 30%;background-color: red;;text-align: center;color: white;" class="sl-flex-column-center-center">
+    <div style="width: 30%;background-color: red;;text-align: center;color: white;height: 3rem;" class="sl-flex-column-center-center">
         <span>立即兑换</span>
     </div>
-
 </div>
 <div class="am-modal am-modal-prompt" tabindex="-1" id="my-prompt">
     <div class="am-modal-dialog" style="background-color: white">
@@ -272,11 +271,51 @@
     var $needJF = $('#bottomNav').children('div:eq(0)').find('b');
     var wH = screen.height;
 
+    //从商品列表页面获得的数据
+    $(function () {
+        var yourJF  = sessionStorage.getItem('yourJF');
+        price = sessionStorage.getItem('price');
+        KC = sessionStorage.setItem('KC',KC);
+        canBuy = yourJF / price;
+
+        var fruitType = sessionStorage.getItem('fruitType');
+        var kind = sessionStorage.getItem('kind');
+        var detail = sessionStorage.getItem('detail');
+        var slider = sessionStorage.getItem('slider');
+
+        //slider
+        var s0 = '<li><img src="../assets/images/fruits/';
+        var s1 = '/';
+        var s2 = '/slider/';
+        var s3 = '_';
+        var s4 = '.jpg" /></li>';
+        var s = '';
+        for(var i = 0;i< parseInt(slider); i++){
+            s += s0 + fruitType + s1 + kind + s2 + fruitType + s3 + (i+1) + s4;
+        }
+        $('ul.am-slides').append($(s));
+
+        //detail
+        var d0 = '<div> <img src="../assets/images/fruits/';
+        var d1 = '/';
+        var d2 = '/detail/';
+        var d3 = '_';
+        var d4 = '.jpg" class="sl-width-height-100percent"> </div>';
+        var d = '';
+        for(var i = 0;i< parseInt(detail); i++){
+            d += d0 + fruitType + d1 + kind + d2 + fruitType + d3 + (i+1) + d4;
+        }
+        $('#detailList').append(d);
+
+    });
+
+
+
     //底部导航栏
     $(function () {
-       rem.bottomNavFixed($('#bottomNav'));
-        var lH = $('#bottomNav').children('div').eq(0).outerHeight();
-        $('#bottomNav').children('div').eq(1).css('height',lH);
+//       rem.bottomNavFixed($('#bottomNav'));
+//        var lH = $('#bottomNav').children('div').eq(0).outerHeight();
+//        $('#bottomNav').children('div').eq(1).css('height',lH);
     });
     //将列表页面上的数据移动到本页面
     $(function () {
